--- a/Walkies Website/DogSelectPage.html
+++ b/Walkies Website/DogSelectPage.html
@@ -40,23 +40,30 @@
           <h2><!-- Title for menuset 1 -->Shelter Sign Up <input type="button" name="button" value="Sign Up" class="SignUp"></h2>
 <hr>
 <h2>Sign Up to Walk</h2>
-<form id="form1" name="form1" method="post">
-  <label for="textfield">First/Last Name:</label>
-  <input type="text" name="textfield"  id="textfield">
+<form>
+  <div class="form-group">
+    <label for="name"></label>
+    <input type="name" class="form-control" id="name" aria-describedby="name" placeholder="First/Last Name">
+    <small id="name1" class="form-text text-muted"></small>
+  </div>
+  <div class="form-group">
+    <label for="Email"></label>
+    <input type="email" class="form-control" id="Email" aria-describedby="email" placeholder="Email">
+    <small id="email" class="form-text text-muted"></small>
+  </div>
+  <div class="form-group">
+    <label for="Phone"></label>
+    <input type="phone" class="form-control" id="Phone" aria-describedby="phone" placeholder="Phone">
+    <small id="phone" class="form-text text-muted"></small>
+  </div>
+  <div class="form-group">
+    <label for="Password"></label>
+    <input type="password" class="form-control" id="password" aria-describedby="password" placeholder="Password">
+    <small id="password1" class="form-text text-muted"></small>
+  </div>
+	<p></p>
+  <button type="submit" class="Submit">Submit</button>
 </form>
-<form id="form1" name="form1" method="post">
-  <label for="textfield2">Email:</label>
-  <input type="text" name="textfield"  id="textfield">
-</form>
-<form id="form1" name="form1" method="post">
-  <label for="textfield3">Phone:</label>
-  <input type="text" name="textfield"  id="textfield">
-</form>
-<form id="form1" name="form1" method="post">
-  <label for="textfield4">Password:</label>
-  <input type="text" name="textfield"  id="textfield">
-</form>
-
           <ul>
             <!-- List of links under menuset 1 -->
             <!--<li><a href="#" title="Link">Link 1</a></li>
