Moar Website Changes

--- a/Walkies Website/HomePage.html
+++ b/Walkies Website/HomePage.html
@@ -19,8 +19,13 @@
   </header>
   <section id="offer"> 
     <!-- The offer section displays a banner text for promotions -->
-    <h2>Shelter</h2>
-    <p>Walk a good boi </p>
+    <h2>Home</h2>
+    <p>Find a good boi</p>
+  </section>
+	<section id="secondoffer"> 
+    <!-- The offer section displays a banner text for promotions -->
+    <h2>Home</h2>
+    <p>Find a good boi</p>
   </section>
   <div id="navbar">
     <ul>
