--- a/Walkies Website/DogSelectPage.html
+++ b/Walkies Website/DogSelectPage.html
@@ -17,10 +17,10 @@
       <!-- Company Logo text --> Walkies</div>
     <div id="headerLinks"><a href="#" title="Login/Register">Login/Register</a><a href="#" title="Cart">Profile</a></div>
   </header>
-  <section id="offer"> 
+  <section id="shelter"> 
     <!-- The offer section displays a banner text for promotions -->
     <h2>Shelter</h2>
-    <p>Walk a good boi </p>
+    
   </section>
   <div id="navbar">
     <ul>
