--- a/Walkies Website/HomePage.html
+++ b/Walkies Website/HomePage.html
@@ -17,16 +17,16 @@
       <!-- Company Logo text --> Walkies</div>
     <div id="headerLinks"><a href="#" title="Login/Register">Login/Register</a><a href="#" title="Cart">Profile</a></div>
   </header>
-  <section id="offer"> 
+  <section id="home_first"> 
     <!-- The offer section displays a banner text for promotions -->
-    <h2>Home</h2>
-    <p>Find a good boi</p>
+    <h2>Map</h2>
+    <p>Find a good boi to walk</p>
   </section>
-	<section id="secondoffer"> 
+	<section id="home_second"> 
     <!-- The offer section displays a banner text for promotions -->
-    <h2>Home</h2>
-    <p>Find a good boi</p>
-  </section>
+    <h2>Shelter</h2>
+    <p>Reserve a good boi</p>
+	</section>
   <div id="navbar">
     <ul>
       <li><a href="HomePage.html">Home</a></li>
