--- a/Walkies Website/Shelter.html
+++ b/Walkies Website/Shelter.html
@@ -15,6 +15,7 @@
     <!-- This is the header content. It contains Logo and links -->
     
     <div id="headerLinks"><a href="#" title="Login/Register">Login/Register</a><a href="#" title="Cart">Profile</a></div>
+	  <img src="Images/Logo.png" width="200" height="164" alt=""/>
   </header>
   <section id="shelter"> 
     <!-- The offer section displays a banner text for promotions -->
