--- a/Walkies Website/HomePage.html
+++ b/Walkies Website/HomePage.html
@@ -16,6 +16,7 @@
     
     <div id="headerLinks"><a href="#" title="Login/Register">Login/Register</a><a href="#" title="Cart">Profile</a></div>
   </header>
+  <img src="Images/Logo.png" width="200" height="164" alt=""/>
   <section id="home_first"> 
     <!-- The offer section displays a banner text for promotions -->
     <h2>Map</h2>
