--- a/Walkies Website/HomePage.html
+++ b/Walkies Website/HomePage.html
@@ -19,14 +19,14 @@
   <img src="Images/Logo.png" width="200" height="164" alt=""/>
   <section id="home_first"> 
     <!-- The offer section displays a banner text for promotions -->
-    <h2>Map</h2>
+    <h2><a href="MapPage.html">Map</a></h2>
     <p>Find a good boi to walk</p>
   </section>
   <section id="home_second"> 
     <!-- The offer section displays a banner text for promotions -->
-    <h2>Shelter</h2>
+    <h2><a href="Shelter.html">Shelter</a></h2>
     <p>Reserve a good boi</p>
-	</section>
+  </section>
   <div id="navbar">
     <ul>
       <li><a href="HomePage.html">Home</a></li>
