--- a/Walkies Website/HomePage.html
+++ b/Walkies Website/HomePage.html
@@ -13,10 +13,11 @@
 <div id="mainWrapper">
   <header> 
     <!-- This is the header content. It contains Logo and links -->
-    
     <div id="headerLinks"><a href="#" title="Login/Register">Login/Register</a><a href="#" title="Cart">Profile</a></div>
   </header>
-  <img src="Images/Logo.png" width="200" height="164" alt=""/>
+  <section id = "image_logo">
+  <img src="Images/Logo.png" width="400" height="317" alt=""/>
+  </section>
   <section id="home_first"> 
     <!-- The offer section displays a banner text for promotions -->
     <h2><a href="MapPage.html">Map</a></h2>
