--- a/Walkies Website/Shelter.html
+++ b/Walkies Website/Shelter.html
@@ -43,9 +43,14 @@
 <h2>Sign Up to Walk</h2>
 <form>
   <div class="form-group">
-    <label for="name"></label>
-    <input type="name" class="form-control" id="name" aria-describedby="name" placeholder="First/Last Name">
+    <label for="name1"></label>
+    <input type="name" class="form-control" id="name" aria-describedby="name" placeholder="First Name">
     <small id="name1" class="form-text text-muted"></small>
+  </div>
+  <div class="form-group">
+    <label for="name2"></label>
+    <input type="name2" class="form-control" id="name2" aria-describedby="name" placeholder="Last Name">
+    <small id="name_last" class="form-text text-muted"></small>
   </div>
   <div class="form-group">
     <label for="Email"></label>
@@ -63,8 +68,11 @@
     <small id="password1" class="form-text text-muted"></small>
   </div>
 	<p></p>
-  <button type="submit" class="Submit">Submit</button>
+    <a href="HomePage.html">
+    <button type="submit" class="Submit">Submit</button>
+    </a>
 </form>
+
           <ul>
             <!-- List of links under menuset 1 -->
             <!--<li><a href="#" title="Link">Link 1</a></li>
