--- a/Walkies Website/MapPage.html
+++ b/Walkies Website/MapPage.html
@@ -59,9 +59,14 @@
 </form>-->
 <form>
   <div class="form-group">
-    <label for="name"></label>
-    <input type="name" class="form-control" id="name" aria-describedby="name" placeholder="First/Last Name">
+    <label for="name1"></label>
+    <input type="name" class="form-control" id="name" aria-describedby="name" placeholder="First Name">
     <small id="name1" class="form-text text-muted"></small>
+  </div>
+  <div class="form-group">
+    <label for="name2"></label>
+    <input type="name2" class="form-control" id="name2" aria-describedby="name" placeholder="Last Name">
+    <small id="name_last" class="form-text text-muted"></small>
   </div>
   <div class="form-group">
     <label for="Email"></label>
@@ -79,8 +84,11 @@
     <small id="password1" class="form-text text-muted"></small>
   </div>
 	<p></p>
-  <button type="submit" class="Submit">Submit</button>
+    <a href="HomePage.html">
+    <button type="submit" class="Submit">Submit</button>
+    </a>
 </form>
+
 
           <ul>
             <!-- List of links under menuset 1 -->
