--- a/Walkies Website/HomePage.html
+++ b/Walkies Website/HomePage.html
@@ -6,27 +6,27 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="eCommerceAssets/styles/eCommerceStyle.css" rel="stylesheet" type="text/css">
 <!--The following script tag downloads a font from the Adobe Edge Web Fonts server for use within the web page. We recommend that you do not modify it.-->
-<script>var __adobewebfontsappname__="dreamweaver"</script><script src="montserrat:n4:default;source-sans-pro:n2:default.js" type="text/javascript"></script>
+<script>var __adobewebfontsappname__="dreamweaver"</script><script src="https://use.edgefonts.net/montserrat:n4:default;source-sans-pro:n2:default.js" type="text/javascript"></script>
 </head>
 
 <body>
 <div id="mainWrapper">
   <header> 
     <!-- This is the header content. It contains Logo and links -->
-    <div id="headerLinks"><a href="#" title="Login/Register">Login/Register</a><a href="#" title="Cart">Profile</a></div>
+    <div id="headerLinks"><strong><a href="#" title="Login/Register">Login/Register</a><a href="#" title="Cart">Profile</a></strong></div>
   </header>
   <section id = "image_logo">
   <img src="Images/Logo.png" width="400" height="317" alt=""/>
   </section>
   <section id="home_first"> 
     <!-- The offer section displays a banner text for promotions -->
-    <h2><a href="MapPage.html">Map</a></h2>
-    <p>Find a good boi to walk</p>
+    <h1><a href="MapPage.html">Map</a></h1>
+    <h4>Find a good boi to walk</h4>
   </section>
   <section id="home_second"> 
     <!-- The offer section displays a banner text for promotions -->
-    <h2><a href="Shelter.html">Shelter</a></h2>
-    <p>Reserve a good boi</p>
+    <h1><a href="Shelter.html">Shelter</a></h1>
+    <h4>Reserve a good boi</h4>
   </section>
   <div id="navbar">
     <ul>
@@ -44,9 +44,9 @@
       <!--<input type="text"  id="search" value="search">-->
       <div id="menubar">
         <nav class="menu">
-          <h2><!-- Title for menuset 1 -->Shelter Sign Up 
+          <h5><!-- Title for menuset 1 -->Shelter Sign Up 
 			  <p></p>
-			  <input type="button" name="button" value="Sign Up" class="SignUp"></h2>
+			  <input type="button" name="button" value="Sign Up" class="SignUp"></h5>
 <hr>
 <h2>Sign Up to Walk</h2>
 <!--<form id="form1" name="form1" method="post">
