--- a/Walkies Website/Shelter.html
+++ b/Walkies Website/Shelter.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="eCommerceAssets/styles/eCommerceStyle.css" rel="stylesheet" type="text/css">
 <!--The following script tag downloads a font from the Adobe Edge Web Fonts server for use within the web page. We recommend that you do not modify it.-->
-<script>var __adobewebfontsappname__="dreamweaver"</script><script src="montserrat:n4:default;source-sans-pro:n2:default.js" type="text/javascript"></script>
+<script>var __adobewebfontsappname__="dreamweaver"</script><script src="https://use.edgefonts.net/montserrat:n4:default;source-sans-pro:n2:default.js" type="text/javascript"></script>
 </head>
 
 <body>
@@ -38,7 +38,9 @@
       <!--<input type="text"  id="search" value="search">-->
       <div id="menubar">
         <nav class="menu">
-          <h2><!-- Title for menuset 1 -->Shelter Sign Up <input type="button" name="button" value="Sign Up" class="SignUp"></h2>
+          <h5><!-- Title for menuset 1 -->Shelter Sign Up 
+			  <p></p>
+			  <input type="button" name="button" value="Sign Up" class="SignUp"></h5>
 <hr>
 <h2>Sign Up to Walk</h2>
 <form>
