A series of font size changes

--- a/Walkies Website/HomePage.html
+++ b/Walkies Website/HomePage.html
@@ -21,12 +21,12 @@
   <section id="home_first"> 
     <!-- The offer section displays a banner text for promotions -->
     <h1><a href="MapPage.html">Map</a></h1>
-    <h4>Find a good boi to walk</h4>
+    <h4>Find a Shelter Near You</h4>
   </section>
   <section id="home_second"> 
     <!-- The offer section displays a banner text for promotions -->
     <h1><a href="Shelter.html">Shelter</a></h1>
-    <h4>Reserve a good boi</h4>
+    <h4>Reserve a Dog to Walk at a Shelter Near You</h4>
   </section>
   <div id="navbar">
     <ul>
