--- a/Walkies Website/MapPage.html
+++ b/Walkies Website/MapPage.html
@@ -103,9 +103,9 @@
         
       </div>
     </section>
-    <section class="Map">
+    <div class="google-maps">
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3021.863682909094!2d-111.84830038433226!3d40.765022842306465!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87525f8d9a1c0b85%3A0xaa04b77f6d1b2c25!2s200+Central+Campus+Dr%2C+Salt+Lake+City%2C+UT+84112!5e0!3m2!1sen!2sus!4v1536447531479" width="800" height="600" frameborder="0" style="border:0" allowfullscreen></iframe>
-    </section>
+    </div>
   </div>
   <!--<footer> 
     <!-- This is the footer with default 3 divs -->
