--- a/Walkies Website/HomePage.html
+++ b/Walkies Website/HomePage.html
@@ -18,16 +18,20 @@
   <section id = "image_logo">
   <img src="Images/Logo.png" width="400" height="317" alt=""/>
   </section>
-  <section id="home_first"> 
+  <a href="MapPage.html" id="home_first">
+  <section id="home_first2">
     <!-- The offer section displays a banner text for promotions -->
-    <h1><a href="MapPage.html">Map</a></h1>
+    <h1>Map</h1>
     <h4>Find a Shelter Near You</h4>
   </section>
-  <section id="home_second"> 
+  </a>
+  <a href="Shelter.html"  id="home_second" >
+  <section> 
     <!-- The offer section displays a banner text for promotions -->
-    <h1><a href="Shelter.html">Shelter</a></h1>
+    <h1>Shelter</h1>
     <h4>Reserve a Dog to Walk at a Shelter Near You</h4>
   </section>
+  </a>
   <div id="navbar">
     <ul>
       <li><a href="HomePage.html">Home</a></li>
