--- a/Walkies Website/Shelter.html
+++ b/Walkies Website/Shelter.html
@@ -27,8 +27,7 @@
       <li><a href="HomePage.html">Home</a></li>
       <li><a href="Shelter.html">Shelter</a></li>
       <li><a href="MapPage.html">Map</a></li>
-      <li><a href="#">Walker</a></li>
-      <li><a href="#">Help </a></li>
+      <li><a href="#">Dog Walk</a></li>
     </ul>
   </div>
 
@@ -109,6 +108,7 @@
       </div>
     </section>
   </div>
+	<footer><a href="Help.html">Help</a></footer>
   <!--<footer> 
     <!-- This is the footer with default 3 divs -->
     <!--<div>
