--- a/Walkies Website/HomePage.html
+++ b/Walkies Website/HomePage.html
@@ -37,8 +37,7 @@
       <li><a href="HomePage.html">Home</a></li>
       <li><a href="Shelter.html">Shelter</a></li>
       <li><a href="MapPage.html">Map</a></li>
-      <li><a href="#">Walker</a></li>
-      <li><a href="#">Help </a></li>
+      <li><a href="#">Dog Walk</a></li>
     </ul>
   </div>
 
@@ -112,6 +111,7 @@
         
       </div>
     </section>
+    <footer><a href="Help.html">Help</a></footer>
     
   </div>
   <!--<footer> 
