--- a/Walkies Website/Help.html
+++ b/Walkies Website/Help.html
@@ -13,41 +13,29 @@
 <div id="mainWrapper">
   <header> 
     <!-- This is the header content. It contains Logo and links -->
-    <div id="headerLinks"><strong><a href="#" title="Login/Register">Login/Register</a><a href="#" title="Cart">Profile</a></strong></div>
+    <div id="headerLinks"><strong><a href="Login Register.html">Login/Register</a><a href="#" title="Cart">Profile</a></strong></div>
   </header>
   <section id = "image_logo">
+  <a href="HomePage.html">
   <img src="Images/Logo.png" width="400" height="317" alt=""/>
-  </section>
-  <a href="MapPage.html" id="home_first">
-  <section id="home_first2">
-    <!-- The offer section displays a banner text for promotions -->
-    <h1>Map</h1>
-    <h4>Find a Shelter Near You</h4>
-  </section>
   </a>
-  <a href="Shelter.html"  id="home_second" >
-  <section> 
-    <!-- The offer section displays a banner text for promotions -->
-    <h1>Shelter</h1>
-    <h4>Reserve a Dog to Walk at a Shelter Near You</h4>
   </section>
-  </a>
+  <a href="MapPage.html" id="home_first">  </a>
+  
   <div id="navbar">
     <ul>
       <li><a href="HomePage.html">Home</a></li>
       <li><a href="Shelter.html">Shelter</a></li>
       <li><a href="MapPage.html">Map</a></li>
-      <li><a href="#">Dog Walk</a></li>
+      <li><a href="Dog Walker.html">Walker Tracker</a>&nbsp;</li>
     </ul>
   </div>
-  <div id="support">
-	</div>
-<h1>This is the content for Layout H1 Tag</h1>
+<div id="support">
+  <h1>Contact Us</h1>
+  <p>Email us at</p>
+</div>
 
-  <div id="content">
-<footer>Help</footer>
-    
-  </div>
+  <div id="content"> </div>
   <!--<footer> 
     <!-- This is the footer with default 3 divs -->
     <!--<div>
