--- a/Walkies Website/HomePage.html
+++ b/Walkies Website/HomePage.html
@@ -13,10 +13,12 @@
 <div id="mainWrapper">
   <header> 
     <!-- This is the header content. It contains Logo and links -->
-    <div id="headerLinks"><strong><a href="#" title="Login/Register">Login/Register</a><a href="#" title="Cart">Profile</a></strong></div>
+    <div id="headerLinks"><strong><a href="#" title="Cart">Profile</a></strong></div>
   </header>
   <section id = "image_logo">
+  <a href="HomePage.html">
   <img src="Images/Logo.png" width="400" height="317" alt=""/>
+  </a>
   </section>
   <a href="MapPage.html" id="home_first">
   <section id="home_first2">
@@ -37,7 +39,7 @@
       <li><a href="HomePage.html">Home</a></li>
       <li><a href="Shelter.html">Shelter</a></li>
       <li><a href="MapPage.html">Map</a></li>
-      <li><a href="#">Dog Walk</a></li>
+      <li><a href="Dog Walker.html">Walker Tracker</a></li>
     </ul>
   </div>
 
@@ -47,8 +49,8 @@
       <!--<input type="text"  id="search" value="search">-->
       <div id="menubar">
         <nav class="menu">
-          <h5><!-- Title for menuset 1 -->Shelter Sign Up 
-			  <p></p>
+          <h5><!-- Title for menuset 1 -->Shelters - Sign up here!
+            <p></p>
 			  <input type="button" name="button" value="Sign Up" class="SignUp"></h5>
 <hr>
 <h2>Sign Up to Walk</h2>
