--- a/Walkies Website/Shelter.html
+++ b/Walkies Website/Shelter.html
@@ -14,8 +14,10 @@
   <header> 
     <!-- This is the header content. It contains Logo and links -->
     
-    <div id="headerLinks"><a href="#" title="Login/Register">Login/Register</a><a href="#" title="Cart">Profile</a></div>
-	  <img src="Images/Logo.png" width="200" height="164" alt=""/>
+    <div id="headerLinks"><a href="Login Register.html">Login/Register</a><a href="#" title="Cart">Profile</a></div>
+	  <a href="HomePage.html">
+	<img src="Images/Logo.png" width="200" height="164" alt=""/>
+	</a>
   </header>
   <section id="shelter"> 
     <!-- The offer section displays a banner text for promotions -->
@@ -27,7 +29,7 @@
       <li><a href="HomePage.html">Home</a></li>
       <li><a href="Shelter.html">Shelter</a></li>
       <li><a href="MapPage.html">Map</a></li>
-      <li><a href="#">Dog Walk</a></li>
+      <li><a href="Dog Walker.html">Walker Tracker</a></li>
     </ul>
   </div>
 
@@ -37,8 +39,8 @@
       <!--<input type="text"  id="search" value="search">-->
       <div id="menubar">
         <nav class="menu">
-          <h5><!-- Title for menuset 1 -->Shelter Sign Up 
-			  <p></p>
+          <h5><!-- Title for menuset 1 -->Shelters - Sign up here!
+<p></p>
 			  <input type="button" name="button" value="Sign Up" class="SignUp"></h5>
 <hr>
 <h2>Sign Up to Walk</h2>
