--- a/Walkies Website/Dog Walker.html
+++ b/Walkies Website/Dog Walker.html
@@ -14,7 +14,7 @@
   <header> 
     <!-- This is the header content. It contains Logo and links -->
     
-    <div id="headerLinks"><a href="Login Register.html">Login/Register</a><a href="#" title="Cart">Profile</a></div>
+    <div id="headerLinks"><a href="Login Register.html">Login/Register</a><a href="Profile.html">Profile</a></div>
 	  <a href="HomePage.html">
 	<img src="Images/Logo.png" width="200" height="164" alt=""/>
 	</a>
