--- a/Walkies Website/Help.html
+++ b/Walkies Website/Help.html
@@ -13,7 +13,7 @@
 <div id="mainWrapper">
   <header> 
     <!-- This is the header content. It contains Logo and links -->
-    <div id="headerLinks"><strong><a href="Login Register.html">Login/Register</a><a href="#" title="Cart">Profile</a></strong></div>
+    <div id="headerLinks"><strong><a href="Login Register.html">Login/Register</a><a href="Profile.html">Profile</a></strong></div>
   </header>
   <section id = "image_logo">
   <a href="HomePage.html">
