--- a/Walkies Website/Shelter.html
+++ b/Walkies Website/Shelter.html
@@ -14,7 +14,7 @@
   <header> 
     <!-- This is the header content. It contains Logo and links -->
     
-    <div id="headerLinks"><a href="Login Register.html">Login/Register</a><a href="#" title="Cart">Profile</a></div>
+    <div id="headerLinks"><a href="Login Register.html">Login/Register</a><a href="Profile.html">Profile</a></div>
 	  <a href="HomePage.html">
 	<img src="Images/Logo.png" width="200" height="164" alt=""/>
 	</a>
@@ -90,22 +90,28 @@
     <section class="mainContent">
       <div class="productRow"><!-- Each product row contains info of 3 elements -->
         <article class="productInfo"><!-- Each individual product description -->
-          <div><img alt="sample" src="Images/Dog.jpg"></div>
-          <p class="price">rllygoodboi </p>
-          <p class="productContent">Content holder </p>
-          <input type="button" name="button" value="Walk" class="buyButton">
+          <div><img alt="sample" src="Images/programs_landing_header.png"></div>
+          <p class="price">Best Friends Animal Society </p>
+          <p class="productContent"></p>
+		  <a href="Doggos.html">
+          <input type="button" name="button" value="Go" class="buyButton">
+		  </a>
         </article>
         <article class="productInfo"><!-- Each individual product description -->
-          <div><img alt="sample" src="Images/cutepupper.jpg"></div>
-          <p class="price">anevengooderboi </p>
-          <p class="productContent">Content holder</p>
-          <input type="button" name="button" value="Walk" class="buyButton">
+          <div><img alt="sample" src="Images/Salt-Lake-County.jpg"></div>
+          <p class="price">Salt Lake County Animal Services </p>
+          <p class="productContent"></p>
+          <a href="Doggos.html">
+          <input type="button" name="button" value="Go" class="buyButton">
+		  </a>
         </article>
         <article class="productInfo"> <!-- Each individual product description -->
-          <div><img alt="sample" src="Images/pupper.jpg"></div>
-          <p class="price">ffffffff </p>
-          <p class="productContent">Content holder</p>
-          <input type="button" name="button" value="Walk" class="buyButton">
+          <div><img alt="sample" src="Images/Calypso-1.jpg"></div>
+          <p class="price">Second Chance for Homeless Pets </p>
+          <p class="productContent"></p>
+          <a href="Doggos.html">
+          <input type="button" name="button" value="Go" class="buyButton">
+		  </a>
         </article>
       </div>
     </section>
