--- a/Walkies Website/HomePage.html
+++ b/Walkies Website/HomePage.html
@@ -15,9 +15,12 @@
     <!-- This is the header content. It contains Logo and links -->
     <div id="headerLinks"><strong><a href="Profile.html">Profile</a></strong></div>
   </header>
+  <section id = "doggo_logo">
+	
+	</section>
   <section id = "image_logo">
   <a href="HomePage.html">
-  <img src="Images/Logo.png" width="400" height="317" alt=""/>
+  <img src="Images/DoggoLogo.png" width="350" height="348" alt=""/><img src="Images/TextLogo.png" width="400" height="317" alt=""/>
   </a>
   </section>
   <a href="MapPage.html" id="home_first">
