--- a/Walkies Website/Login Register.html
+++ b/Walkies Website/Login Register.html
@@ -15,9 +15,9 @@
     <!-- This is the header content. It contains Logo and links -->
     <div id="headerLinks"><strong></strong></div>
   </header>
-  <section id = "image_logo">
+   <section id = "image_logo">
   <a href="HomePage.html">
-  <img src="Images/Logo.png" width="400" height="317" alt=""/>
+  <img src="Images/DoggoLogo.png" width="350" height="348" alt=""/><img src="Images/TextLogo.png" width="400" height="317" alt=""/>
   </a>
   </section>
 
