--- a/Walkies Website/MapPage.html
+++ b/Walkies Website/MapPage.html
@@ -16,7 +16,7 @@
     
     <div id="headerLinks"><a href="Login Register.html">Login/Register</a><a href="Profile.html">Profile</a></div>
 	<a href="HomePage.html">
-	<img src="Images/Logo.png" width="200" height="164" alt=""/>
+	<img src="Images/TextLogo.png" width="200" height="164" alt=""/>
 	</a>
   </header>
   <section id="map"> 
