--- a/Walkies Website/Shelter.html
+++ b/Walkies Website/Shelter.html
@@ -16,7 +16,7 @@
     
     <div id="headerLinks"><a href="Login Register.html">Login/Register</a><a href="Profile.html">Profile</a></div>
 	  <a href="HomePage.html">
-	<img src="Images/Logo.png" width="200" height="164" alt=""/>
+	<img src="Images/TextLogo.png" width="200" height="164" alt=""/>
 	</a>
   </header>
   <section id="shelter"> 
@@ -92,7 +92,9 @@
         <article class="productInfo"><!-- Each individual product description -->
           <div><img alt="sample" src="Images/programs_landing_header.png"></div>
           <p class="price">Best Friends Animal Society </p>
-          <p class="productContent"></p>
+          <p class="productContent">"Located in the red rock canyons of southern Utah, it is a home-between-homes for dogs, cats, bunnies, birds, pigs, horses and other animals, including those in need of lifelong care."</p>
+			<p class ="productContent">2005 1100 E, Salt Lake City, UT 84106</p>
+			<p class ="productContent">Open M-F from 11am - 7pm, and Sun from 11am -4pm</p>
 		  <a href="Doggos.html">
           <input type="button" name="button" value="Go" class="buyButton">
 		  </a>
@@ -100,7 +102,9 @@
         <article class="productInfo"><!-- Each individual product description -->
           <div><img alt="sample" src="Images/Salt-Lake-County.jpg"></div>
           <p class="price">Salt Lake County Animal Services </p>
-          <p class="productContent"></p>
+          <p class="productContent">"Salt Lake County Animal Services is dedicated to providing consistent, reliable, and professional solutions for animal related issues."</p>
+			<p class ="productContent">511 W 3900 S, Salt Lake City, UT 84123</p>
+			<p class ="productContent">Open M-Sat, from 10am - 6pm</p>
           <a href="Doggos.html">
           <input type="button" name="button" value="Go" class="buyButton">
 		  </a>
@@ -108,7 +112,9 @@
         <article class="productInfo"> <!-- Each individual product description -->
           <div><img alt="sample" src="Images/Calypso-1.jpg"></div>
           <p class="price">Second Chance for Homeless Pets </p>
-          <p class="productContent"></p>
+          <p class="productContent">"At Second Chance our priority is finding the best match for each animal.  Like people, animals are individuals and have different needs for a successful adoption, according to their personalities."</p>
+			<p class ="productContent">200 E Gordon Ln, Salt Lake City, UT 84107</p>
+			<p class ="productContent">Open T-Sat, from 9am - 6pm, and Sun from 11am - 4pm</p>
           <a href="Doggos.html">
           <input type="button" name="button" value="Go" class="buyButton">
 		  </a>
