--- a/Walkies Website/Profile.html
+++ b/Walkies Website/Profile.html
@@ -17,7 +17,7 @@
   </header>
   <section id = "image_logo">
   <a href="HomePage.html">
-  <img src="Images/Logo.png" width="400" height="317" alt=""/>
+  <img src="Images/DoggoLogo.png" width="350" height="348" alt=""/><img src="Images/TextLogo.png" width="400" height="317" alt=""/>
   </a>
   </section>
   <a href="MapPage.html" id="home_first">  </a>
